@@ -8,7 +8,6 @@ import org.junit.jupiter.api.io.TempDir;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -145,7 +144,7 @@ public class GenerateMojoTest {
 
     private void assertBanner(final Path generatedFile, final String expectedFile) throws IOException {
         try (InputStream stream = GenerateMojoTest.class.getResourceAsStream(expectedFile)) {
-            final String generatedBanner = new String(Files.readAllBytes(generatedFile), StandardCharsets.UTF_8);
+            final String generatedBanner = Files.readString(generatedFile);
             final String expectedBanner = IOUtil.toString(stream, "UTF-8");
             assertThat(generatedBanner).isEqualTo(expectedBanner);
         }
